# src/main/kotlin/com/spasinnya/presentation/model/ResetPasswordRequest.kt
@@ -1,0 +1,10 @@
+package com.spasinnya.presentation.model
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class ResetPasswordRequest(
+    val email: String,
+    val code: String,
+    val newPassword: String
+)
